--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@angular-devkit/build-angular": "^0.13.0",
     "@angular/animations": "^6.1.0",
+    "@angular/cdk": "^7.3.1",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
@@ -20,15 +21,19 @@
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
     "@angular/localize": "^10.0.4",
+    "@angular/material": "^7.3.1",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^3.3.0",
+    "angular7-data-table": "^1.0.13",
     "bootstrap": "^4.0.0",
     "core-js": "^2.5.4",
     "firebase": "^5.11.1",
     "firebase-tools": "^8.6.0",
+    "font-awesome": "^4.7.0",
     "g": "^2.0.1",
+    "ng2-validation": "^4.2.0",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
